# jpeg-endianness-tests

./: CMakeLists.txt  to-do.txt
include/: collections.hpp  config.hpp  image_utilities.hpp  img_manip.hpp  tree.hpp  trie.hpp  utilities.hpp
include/error_handling/: errcodes.hpp  exceptions.hpp
include/initialization/: initialization.hpp
include/initialization/config/: initiralization_config.hpp
include/initialization/error_handling/: basic_error_handling.hpp
include/internal/error_handling/errcodes/: config.inc
include/logging/: log.hpp
include/memory/: memory.hpp
internal/include/: __trie.hpp
notes/: Convolutional Neural Networks.txt  I expect that most of.txt  README.md  Requests that this particular.txt  TaskController functions.txt  There is a certain way.txt  Type of schedulers.txt  What can go wrong during.txt  notes.txt
src/: CMakeLists.txt  config.cpp  image_utilities.cpp  main.cpp  opencv_jpeg.cpp  trie.cpp  utilities.cpp
src/error_handling/: basic_error_handling.cpp
src/initialization/: CMakeLists.txt  README.md  initialization.cpp
src/initialization/config/: CMakeLists.txt
src/initialization/error_handling/: CMakeLists.txt  error_handling.cpp
tests/: CMakeLists.txt
tests/initialization/error_handling/: CMakeLists.txt  test_basic_error_handling.cpp
tests/src/: trie_tests.cpp
